@@ -20,31 +20,18 @@
  */
 package org.opencastproject.scheduler.impl;
 
-import static com.entwinemedia.fn.Stream.$;
-import static com.entwinemedia.fn.data.Opt.some;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.opencastproject.scheduler.impl.SchedulerUtil.calculateChecksum;
-import static org.opencastproject.scheduler.impl.SchedulerUtil.episodeToMp;
-import static org.opencastproject.scheduler.impl.SchedulerUtil.eventOrganizationFilter;
-import static org.opencastproject.scheduler.impl.SchedulerUtil.isNotEpisodeDublinCore;
-import static org.opencastproject.scheduler.impl.SchedulerUtil.recordToMp;
-import static org.opencastproject.scheduler.impl.SchedulerUtil.uiAdapterToFlavor;
 import static org.opencastproject.security.api.SecurityConstants.GLOBAL_ADMIN_ROLE;
 import static org.opencastproject.util.EqualsUtil.ne;
 import static org.opencastproject.util.RequireUtil.notEmpty;
 import static org.opencastproject.util.RequireUtil.notNull;
 import static org.opencastproject.util.RequireUtil.requireTrue;
-import static org.opencastproject.util.data.Monadics.mlist;
 
 import org.opencastproject.assetmanager.api.Asset;
 import org.opencastproject.assetmanager.api.AssetManager;
 import org.opencastproject.assetmanager.api.Availability;
 import org.opencastproject.assetmanager.api.Snapshot;
-import org.opencastproject.assetmanager.api.query.AQueryBuilder;
-import org.opencastproject.assetmanager.api.query.ARecord;
-import org.opencastproject.assetmanager.api.query.AResult;
-import org.opencastproject.assetmanager.api.query.ASelectQuery;
-import org.opencastproject.assetmanager.api.query.Predicate;
 import org.opencastproject.elasticsearch.api.SearchIndexException;
 import org.opencastproject.elasticsearch.index.ElasticsearchIndex;
 import org.opencastproject.elasticsearch.index.objects.event.Event;
@@ -100,14 +87,9 @@ import org.opencastproject.util.NotFoundException;
 import org.opencastproject.util.OsgiUtil;
 import org.opencastproject.util.XmlNamespaceBinding;
 import org.opencastproject.util.XmlNamespaceContext;
-import org.opencastproject.util.data.Option;
 import org.opencastproject.util.data.functions.Misc;
-import org.opencastproject.util.data.functions.Strings;
 import org.opencastproject.workspace.api.Workspace;
 
-import com.entwinemedia.fn.Fn;
-import com.entwinemedia.fn.Stream;
-import com.entwinemedia.fn.data.Opt;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.google.gson.Gson;
@@ -130,6 +112,7 @@ import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.component.annotations.ReferenceCardinality;
 import org.osgi.service.component.annotations.ReferencePolicy;
+import org.osgi.service.component.annotations.ReferencePolicyOption;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -164,7 +147,6 @@ import java.util.stream.Collectors;
  * Implementation of {@link SchedulerService}.
  */
 @Component(
-    immediate = true,
     service = { ManagedService.class, SchedulerService.class, IndexProducer.class },
     property = {
         "service.description=Scheduler Service"
@@ -190,7 +172,6 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   private static final String SNAPSHOT_OWNER = SchedulerService.JOB_TYPE;
 
   private static final Gson gson = new Gson();
-
   /**
    * Deserializes properties stored in string columns of the extended event table
    * @param props Properties as retrieved from the DB
@@ -249,6 +230,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   @Reference(
       cardinality = ReferenceCardinality.MULTIPLE,
       policy = ReferencePolicy.DYNAMIC,
+      policyOption = ReferencePolicyOption.GREEDY,
       unbind = "removeSchedulerUpdateHandler"
   )
   public void addSchedulerUpdateHandler(SchedulerUpdateHandler handler) {
@@ -326,7 +308,8 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    */
   private void sendSchedulerUpdate(SchedulerItemList list) {
     while (schedulerUpdateHandlers.size() != 1) {
-      logger.warn("Expecting 1 handler, but {} are registered.  Waiting 10s then retrying...", schedulerUpdateHandlers.size());
+      logger.warn("Expecting 1 handler, but {} are registered.  Waiting 10s then retrying...",
+          schedulerUpdateHandlers.size());
       try {
         Thread.sleep(10000L);
       } catch (InterruptedException e) { /* swallow this, nothing to do */ }
@@ -364,6 +347,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   @Reference(
       cardinality = ReferenceCardinality.MULTIPLE,
       policy = ReferencePolicy.DYNAMIC,
+      policyOption = ReferencePolicyOption.GREEDY,
       unbind = "removeCatalogUIAdapter"
   )
   public void addCatalogUIAdapter(EventCatalogUIAdapter catalogUIAdapter) {
@@ -392,17 +376,17 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   @Override
   public void updated(Dictionary<String, ?> properties) throws ConfigurationException {
     if (properties != null) {
-      final Option<Integer> cacheExpireDuration = OsgiUtil.getOptCfg(properties, CFG_KEY_LAST_MODIFIED_CACHE_EXPIRE)
-              .bind(Strings.toInt);
-      if (cacheExpireDuration.isSome()) {
+      final Optional<Integer> cacheExpireDuration =
+          OsgiUtil.getOptCfgAsInt(properties, CFG_KEY_LAST_MODIFIED_CACHE_EXPIRE);
+      if (cacheExpireDuration.isPresent()) {
         lastModifiedCache = CacheBuilder.newBuilder().expireAfterWrite(cacheExpireDuration.get(), TimeUnit.SECONDS)
                 .build();
         logger.info("Set last modified cache to {}", DateTimeSupport.humanReadableTime(cacheExpireDuration.get()));
       } else {
         logger.info("Set last modified cache to default {}", DateTimeSupport.humanReadableTime(DEFAULT_CACHE_EXPIRE));
       }
-      final Option<Boolean> maintenance = OsgiUtil.getOptCfgAsBoolean(properties, CFG_KEY_MAINTENANCE);
-      if (maintenance.getOrElse(false)) {
+      final Optional<Boolean> maintenance = OsgiUtil.getOptCfgAsBoolean(properties, CFG_KEY_MAINTENANCE);
+      if (maintenance.orElse(false)) {
         final String name = SchedulerServiceImpl.class.getName();
         logger.warn("Putting scheduler into maintenance mode. This only makes sense when migrating data. If this is not"
                 + " intended, edit the config file '{}.cfg' accordingly and restart opencast.", name);
@@ -414,7 +398,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   @Override
   public void addEvent(Date startDateTime, Date endDateTime, String captureAgentId, Set<String> userIds,
           MediaPackage mediaPackage, Map<String, String> wfProperties, Map<String, String> caMetadata,
-          Opt<String> schedulingSource)
+          Optional<String> schedulingSource)
                   throws UnauthorizedException, SchedulerException {
     addEventInternal(startDateTime, endDateTime, captureAgentId, userIds, mediaPackage, wfProperties, caMetadata,
             schedulingSource);
@@ -422,7 +406,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
   private void addEventInternal(Date startDateTime, Date endDateTime, String captureAgentId, Set<String> userIds,
           MediaPackage mediaPackage, Map<String, String> wfProperties, Map<String, String> caMetadata,
-          Opt<String> schedulingSource)
+          Optional<String> schedulingSource)
                   throws SchedulerException {
     notNull(startDateTime, "startDateTime");
     notNull(endDateTime, "endDateTime");
@@ -432,23 +416,20 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notNull(wfProperties, "wfProperties");
     notNull(caMetadata, "caMetadata");
     notNull(schedulingSource, "schedulingSource");
-    if (endDateTime.before(startDateTime))
+    if (endDateTime.before(startDateTime)) {
       throw new IllegalArgumentException("The end date is before the start date");
+    }
 
     final String mediaPackageId = mediaPackage.getIdentifier().toString();
 
     try {
-      AQueryBuilder query = assetManager.createQuery();
-      AResult result = query.select(query.nothing())
-              .where(withOrganization(query).and(query.mediaPackageId(mediaPackageId).and(query.version().isLatest())))
-              .run();
-      Opt<ARecord> record = result.getRecords().head();
-      if (record.isSome()) {
+      Optional<MediaPackage> noMediaPackage = assetManager.getMediaPackage(mediaPackageId);
+      if (noMediaPackage.isPresent()) {
         logger.warn("Mediapackage with id '{}' already exists!", mediaPackageId);
         throw new SchedulerConflictException("Mediapackage with id '" + mediaPackageId + "' already exists!");
       }
 
-      Opt<String> seriesId = Opt.nul(StringUtils.trimToNull(mediaPackage.getSeries()));
+      Optional<String> seriesId = Optional.ofNullable(StringUtils.trimToNull(mediaPackage.getSeries()));
 
       List<MediaPackage> conflictingEvents = findConflictingEvents(captureAgentId, startDateTime, endDateTime);
       if (conflictingEvents.size() > 0) {
@@ -458,8 +439,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       }
 
       // Load dublincore and acl for update
-      Opt<DublinCoreCatalog> dublinCore = DublinCoreUtil.loadEpisodeDublinCore(workspace, mediaPackage)
-          .map(Opt::some).orElse(Opt.none());
+      Optional<DublinCoreCatalog> dublinCore = DublinCoreUtil.loadEpisodeDublinCore(workspace, mediaPackage);
       AccessControlList acl = authorizationService.getActiveAcl(mediaPackage).getA();
 
       // Get updated agent properties
@@ -470,17 +450,18 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       String checksum = calculateChecksum(workspace, getEventCatalogUIAdapterFlavors(), startDateTime, endDateTime,
                                           captureAgentId, userIds, mediaPackage, dublinCore, wfProperties,
                                           finalCaProperties, acl);
-      persistEvent(mediaPackageId, checksum, Opt.some(startDateTime), Opt.some(endDateTime),
-              Opt.some(captureAgentId), Opt.some(userIds), Opt.some(mediaPackage), Opt.some(wfProperties),
-              Opt.some(finalCaProperties), schedulingSource);
+      persistEvent(mediaPackageId, checksum, Optional.of(startDateTime), Optional.of(endDateTime),
+              Optional.of(captureAgentId), Optional.of(userIds), Optional.of(mediaPackage), Optional.of(wfProperties),
+              Optional.of(finalCaProperties), schedulingSource);
 
       // Update live event
-      updateLiveEvent(mediaPackageId, Opt.some(acl), dublinCore, Opt.some(startDateTime),
-              Opt.some(endDateTime), Opt.some(captureAgentId), Opt.some(finalCaProperties));
+      updateLiveEvent(mediaPackageId, Optional.of(acl), dublinCore, Optional.of(startDateTime),
+              Optional.of(endDateTime), Optional.of(captureAgentId), Optional.of(finalCaProperties));
 
       // Update Elasticsearch index
-      updateEventInIndex(mediaPackageId, Opt.some(acl), dublinCore, Opt.some(startDateTime), Opt.some(endDateTime),
-          Opt.some(userIds), Opt.some(captureAgentId), Opt.some(finalCaProperties), Opt.none());
+      updateEventInIndex(mediaPackageId, Optional.of(acl), dublinCore, Optional.of(startDateTime),
+          Optional.of(endDateTime), Optional.of(userIds), Optional.of(captureAgentId), Optional.of(finalCaProperties),
+          Optional.empty());
 
       // Update last modified
       touchLastEntry(captureAgentId);
@@ -495,7 +476,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   @Override
   public Map<String, Period> addMultipleEvents(RRule rRule, Date start, Date end, Long duration, TimeZone tz,
           String captureAgentId, Set<String> userIds, MediaPackage templateMp, Map<String, String> wfProperties,
-          Map<String, String> caMetadata, Opt<String> schedulingSource)
+          Map<String, String> caMetadata, Optional<String> schedulingSource)
           throws UnauthorizedException, SchedulerConflictException, SchedulerException {
     // input Rrule is UTC. Needs to be adjusted to tz
     Util.adjustRrule(rRule, start, tz);
@@ -509,7 +490,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
   private Map<String, Period> addMultipleEventInternal(List<Period> periods, String captureAgentId,
           Set<String> userIds, MediaPackage templateMp, Map<String, String> wfProperties,
-          Map<String, String> caMetadata, Opt<String> schedulingSource) throws SchedulerException {
+          Map<String, String> caMetadata, Optional<String> schedulingSource) throws SchedulerException {
     notNull(periods, "periods");
     requireTrue(periods.size() > 0, "periods");
     notEmpty(captureAgentId, "captureAgentId");
@@ -523,31 +504,23 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
     try {
       LinkedList<Id> ids = new LinkedList<>();
-      AQueryBuilder qb = assetManager.createQuery();
-      Predicate p = null;
       //While we don't have a list of IDs equal to the number of periods
       while (ids.size() <= periods.size()) {
         //Create a list of IDs equal to the number of periods, along with a set of AM predicates
         while (ids.size() <= periods.size()) {
           Id id = new IdImpl(UUID.randomUUID().toString());
           ids.add(id);
-          Predicate np = qb.mediaPackageId(id.toString());
-          //Haha, p = np jokes with the AM query language. Ha. Haha. Ha.  (Sob...)
-          if (null == p) {
-            p = np;
-          } else {
-            p = p.or(np);
-          }
         }
-        //Select the list of ids which alread exist.  Hint: this needs to be zero
-        AResult result = qb.select(qb.nothing()).where(withOrganization(qb).and(p).and(qb.version().isLatest())).run();
+        //Select the list of ids which already exist.  Hint: this needs to be zero
+        List<Snapshot> snapshots = assetManager.getLatestSnapshots(ids);
+
         //If there is conflict, clear the list and start over
-        if (result.getTotalSize() > 0) {
+        if (snapshots.size() > 0) {
           ids.clear();
         }
       }
 
-      Opt<String> seriesId = Opt.nul(StringUtils.trimToNull(templateMp.getSeries()));
+      Optional<String> seriesId = Optional.ofNullable(StringUtils.trimToNull(templateMp.getSeries()));
 
       List<MediaPackage> conflictingEvents = findConflictingEvents(periods, captureAgentId, TimeZone.getDefault());
       if (conflictingEvents.size() > 0) {
@@ -581,11 +554,13 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
         mediaPackage.setIdentifier(id);
 
         // Update dublincore title and temporal
-        String newTitle = dc.getFirst(DublinCore.PROPERTY_TITLE) + String.format(" %0" + Integer.toString(periods.size()).length() + "d", currentCounter + 1);
+        String newTitle = dc.getFirst(DublinCore.PROPERTY_TITLE)
+            + String.format(" %0" + Integer.toString(periods.size()).length() + "d", currentCounter + 1);
         dc.set(DublinCore.PROPERTY_TITLE, newTitle);
         DublinCoreValue eventTime = EncodingSchemeUtils.encodePeriod(new DCMIPeriod(startDate, endDate),
                 Precision.Second);
         dc.set(DublinCore.PROPERTY_TEMPORAL, eventTime);
+        dc.set(DublinCore.PROPERTY_CREATED, EncodingSchemeUtils.encodeDate(startDate, Precision.Second));
         try {
           mediaPackage = updateDublincCoreCatalog(mediaPackage, dc);
         } catch (Exception e) {
@@ -601,8 +576,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
         cal.setTime(event.getEnd());
         Date endDateTime = cal.getTime();
         // Load dublincore and acl for update
-        Opt<DublinCoreCatalog> dublinCore = DublinCoreUtil.loadEpisodeDublinCore(workspace, mediaPackage)
-            .map(Opt::some).orElse(Opt.none());
+        Optional<DublinCoreCatalog> dublinCore = DublinCoreUtil.loadEpisodeDublinCore(workspace, mediaPackage);
         AccessControlList acl = authorizationService.getActiveAcl(mediaPackage).getA();
 
         // Get updated agent properties
@@ -613,20 +587,21 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
         String checksum = calculateChecksum(workspace, getEventCatalogUIAdapterFlavors(), startDateTime, endDateTime,
                 captureAgentId, userIds, mediaPackage, dublinCore, wfProperties, finalCaProperties, acl);
         try {
-          persistEvent(mediaPackageId, checksum, Opt.some(startDateTime), Opt.some(endDateTime),
-                Opt.some(captureAgentId), Opt.some(userIds), Opt.some(mediaPackage), Opt.some(wfProperties),
-                Opt.some(finalCaProperties), schedulingSource);
+          persistEvent(mediaPackageId, checksum, Optional.of(startDateTime), Optional.of(endDateTime),
+                Optional.of(captureAgentId), Optional.of(userIds), Optional.of(mediaPackage), Optional.of(wfProperties),
+                Optional.of(finalCaProperties), schedulingSource);
         } catch (Exception e) {
           Misc.chuck(e);
         }
 
         // Update live event
-        updateLiveEvent(mediaPackageId, some(acl), dublinCore, Opt.some(startDateTime), Opt.some(endDateTime),
-                Opt.some(captureAgentId), Opt.some(finalCaProperties));
+        updateLiveEvent(mediaPackageId, Optional.of(acl), dublinCore, Optional.of(startDateTime),
+                Optional.of(endDateTime), Optional.of(captureAgentId), Optional.of(finalCaProperties));
 
         // Update Elasticsearch index
-        updateEventInIndex(mediaPackageId, some(acl), dublinCore, Opt.some(startDateTime), Opt.some(endDateTime),
-                Opt.some(userIds), Opt.some(captureAgentId), Opt.some(finalCaProperties), Opt.none());
+        updateEventInIndex(mediaPackageId, Optional.of(acl), dublinCore, Optional.of(startDateTime),
+                Optional.of(endDateTime), Optional.of(userIds), Optional.of(captureAgentId),
+                Optional.of(finalCaProperties), Optional.empty());
 
         scheduledEvents.put(mediaPackageId, event);
         for (MediaPackageElement mediaPackageElement : mediaPackage.getElements()) {
@@ -651,27 +626,28 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   @Override
-  public void updateEvent(final String mpId, Opt<Date> startDateTime, Opt<Date> endDateTime, Opt<String> captureAgentId,
-          Opt<Set<String>> userIds, Opt<MediaPackage> mediaPackage, Opt<Map<String, String>> wfProperties,
-          Opt<Map<String, String>> caMetadata)
+  public void updateEvent(final String mpId, Optional<Date> startDateTime, Optional<Date> endDateTime,
+          Optional<String> captureAgentId, Optional<Set<String>> userIds, Optional<MediaPackage> mediaPackage,
+          Optional<Map<String, String>> wfProperties, Optional<Map<String, String>> caMetadata)
                   throws NotFoundException, UnauthorizedException, SchedulerException {
     updateEventInternal(mpId, startDateTime, endDateTime, captureAgentId, userIds, mediaPackage,
             wfProperties, caMetadata, false);
   }
 
   @Override
-  public void updateEvent(final String mpId, Opt<Date> startDateTime, Opt<Date> endDateTime, Opt<String> captureAgentId,
-          Opt<Set<String>> userIds, Opt<MediaPackage> mediaPackage, Opt<Map<String, String>> wfProperties,
-          Opt<Map<String, String>> caMetadata, boolean allowConflict)
+  public void updateEvent(final String mpId, Optional<Date> startDateTime, Optional<Date> endDateTime,
+          Optional<String> captureAgentId, Optional<Set<String>> userIds, Optional<MediaPackage> mediaPackage,
+          Optional<Map<String, String>> wfProperties, Optional<Map<String, String>> caMetadata, boolean allowConflict)
                 throws NotFoundException, UnauthorizedException, SchedulerException {
     updateEventInternal(mpId, startDateTime, endDateTime, captureAgentId, userIds, mediaPackage,
             wfProperties, caMetadata, allowConflict);
   }
 
-  private void updateEventInternal(final String mpId, Opt<Date> startDateTime,
-          Opt<Date> endDateTime, Opt<String> captureAgentId, Opt<Set<String>> userIds,
-          Opt<MediaPackage> mediaPackageOpt, Opt<Map<String, String>> wfProperties, Opt<Map<String, String>> caMetadata,
-          boolean allowConflict) throws NotFoundException, SchedulerException {
+  private void updateEventInternal(final String mpId, Optional<Date> startDateTime,
+          Optional<Date> endDateTime, Optional<String> captureAgentId, Optional<Set<String>> userIds,
+          Optional<MediaPackage> mediaPackageOpt, Optional<Map<String, String>> wfProperties,
+          Optional<Map<String, String>> caMetadata, boolean allowConflict)
+                throws NotFoundException, SchedulerException {
     notEmpty(mpId, "mpId");
     notNull(startDateTime, "startDateTime");
     notNull(endDateTime, "endDateTime");
@@ -682,26 +658,19 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notNull(caMetadata, "caMetadata");
 
     try {
-      AQueryBuilder query = assetManager.createQuery();
-
-      ASelectQuery select = query
-              .select(query.snapshot())
-              .where(withOrganization(query).and(query.mediaPackageId(mpId).and(query.version().isLatest())
-                  .and(withOwner(query))));
-      Opt<ARecord> optEvent = select.run().getRecords().head();
-      Opt<ExtendedEventDto> optExtEvent = persistence.getEvent(mpId);
-      if (optEvent.isNone() || optExtEvent.isNone())
+      Optional<Snapshot> optSnapshot = assetManager.getLatestSnapshot(mpId);
+      Optional<ExtendedEventDto> optExtEvent = persistence.getEvent(mpId);
+      if (optSnapshot.isEmpty() || optExtEvent.isEmpty()) {
         throw new NotFoundException("No event found while updating event " + mpId);
+      }
 
-      ARecord record = optEvent.get();
-      if (record.getSnapshot().isNone())
-        throw new NotFoundException("No mediapackage found while updating event " + mpId);
-      Snapshot snapshot = record.getSnapshot().get();
+      Snapshot snapshot = optSnapshot.get();
       MediaPackage archivedMediaPackage = snapshot.getMediaPackage();
 
-      Opt<DublinCoreCatalog> archivedDublinCoreOpt = loadEpisodeDublinCoreFromAsset(snapshot);
-      if (archivedDublinCoreOpt.isNone())
+      Optional<DublinCoreCatalog> archivedDublinCoreOpt = loadEpisodeDublinCoreFromAsset(snapshot);
+      if (archivedDublinCoreOpt.isEmpty()) {
         throw new NotFoundException("No dublincore found while updating event " + mpId);
+      }
       DublinCoreCatalog archivedDublinCore = archivedDublinCoreOpt.get();
       AccessControlList archivedAcl = authorizationService.getActiveAcl(archivedMediaPackage).getA();
 
@@ -709,30 +678,32 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       Date start = extendedEventDto.getStartDate();
       Date end = extendedEventDto.getEndDate();
 
-      if ((startDateTime.isSome() || endDateTime.isSome()) && endDateTime.getOr(end).before(startDateTime.getOr(start)))
+      if ((startDateTime.isPresent() || endDateTime.isPresent())
+          && endDateTime.orElse(end).before(startDateTime.orElse(start))) {
         throw new SchedulerException("The end date is before the start date");
+      }
 
       String agentId = extendedEventDto.getCaptureAgentId();
-      Opt<String> seriesId = Opt.nul(archivedMediaPackage.getSeries());
+      Optional<String> seriesId = Optional.ofNullable(archivedMediaPackage.getSeries());
 
       // Check for conflicting events
       // Check scheduling conflicts in case a property relevant for conflicts has changed
-      if ((captureAgentId.isSome() || startDateTime.isSome() || endDateTime.isSome())
+      if ((captureAgentId.isPresent() || startDateTime.isPresent() || endDateTime.isPresent())
             && (!allowConflict || !isAdmin())) {
-        List<MediaPackage> conflictingEvents = $(findConflictingEvents(captureAgentId.getOr(agentId),
-                startDateTime.getOr(start), endDateTime.getOr(end))).filter(new Fn<MediaPackage, Boolean>() {
-                    @Override
-                    public Boolean apply(MediaPackage mp) {
-                    return !mpId.equals(mp.getIdentifier().toString());
-                  }
-                  }).toList();
+        List<MediaPackage> conflictingEvents = findConflictingEvents(
+            captureAgentId.orElse(agentId),
+            startDateTime.orElse(start),
+            endDateTime.orElse(end)
+        ).stream()
+            .filter(mp -> !mpId.equals(mp.getIdentifier().toString()))
+            .collect(Collectors.toList());
         if (conflictingEvents.size() > 0) {
           logger.info("Unable to update event {}, conflicting events found: {}", mpId, conflictingEvents);
           throw new SchedulerConflictException("Unable to update event, conflicting events found for event " + mpId);
         }
       }
 
-      Set<String> presenters = getPresenters(Opt.nul(extendedEventDto.getPresenters()).getOr(""));
+      Set<String> presenters = getPresenters(Optional.ofNullable(extendedEventDto.getPresenters()).orElse(""));
       Map<String, String> wfProps = deserializeExtendedEventProperties(extendedEventDto.getWorkflowProperties());
       Map<String, String> caProperties = deserializeExtendedEventProperties(
               extendedEventDto.getCaptureAgentProperties());
@@ -741,34 +712,35 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       boolean dublinCoreChanged = false;
 
       // Get workflow properties
-      for (Map<String, String> wfPropsToUpdate : wfProperties) {
+      if (wfProperties.isPresent()) {
         propertiesChanged = true;
-        wfProps = wfPropsToUpdate;
+        wfProps = wfProperties.get();
       }
 
       // Get capture agent properties
-      for (Map<String, String> caMetadataToUpdate : caMetadata) {
+      if (caMetadata.isPresent()) {
         propertiesChanged = true;
-        caProperties = caMetadataToUpdate;
+        caProperties = caMetadata.get();
       }
 
-      if (captureAgentId.isSome())
+      if (captureAgentId.isPresent()) {
         propertiesChanged = true;
+      }
 
-      Opt<AccessControlList> changedAclOpt = Opt.none();
-      Opt<DublinCoreCatalog> changedDublinCoreOpt = Opt.none();
-      if (mediaPackageOpt.isSome()) {
+      Optional<AccessControlList> changedAclOpt = Optional.empty();
+      Optional<DublinCoreCatalog> changedDublinCoreOpt = Optional.empty();
+      if (mediaPackageOpt.isPresent()) {
         MediaPackage mediaPackage = mediaPackageOpt.get();
         // Check for series change
         if (ne(archivedMediaPackage.getSeries(), mediaPackage.getSeries())) {
           propertiesChanged = true;
-          seriesId = Opt.nul(mediaPackage.getSeries());
+          seriesId = Optional.ofNullable(mediaPackage.getSeries());
         }
 
         // Check for ACL change
         AccessControlList acl = authorizationService.getActiveAcl(mediaPackage).getA();
         if (!AccessControlUtil.equals(acl, archivedAcl)) {
-          changedAclOpt = some(acl);
+          changedAclOpt = Optional.of(acl);
         }
 
         // Check for dublin core change
@@ -777,40 +749,40 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
         if (dublinCoreOpt.isPresent() && !DublinCoreUtil.equals(archivedDublinCore, dublinCoreOpt.get())) {
           dublinCoreChanged = true;
           propertiesChanged = true;
-          changedDublinCoreOpt = dublinCoreOpt.map(Opt::some).orElse(Opt.none());
+          changedDublinCoreOpt = dublinCoreOpt;
         }
       }
 
       //update metadata for dublincore
-      DublinCoreCatalog dublinCore = changedDublinCoreOpt.getOr(archivedDublinCore);
+      DublinCoreCatalog dublinCore = changedDublinCoreOpt.orElse(archivedDublinCore);
       DublinCoreCatalog dublinCoreCopy = (DublinCoreCatalog) dublinCore.clone();
-      if (startDateTime.isSome() && endDateTime.isSome()) {
+      if (startDateTime.isPresent() && endDateTime.isPresent()) {
         DublinCoreValue eventTime = EncodingSchemeUtils.encodePeriod(
                 new DCMIPeriod(startDateTime.get(), endDateTime.get()), Precision.Second);
         dublinCore.set(DublinCore.PROPERTY_TEMPORAL, eventTime);
       }
-      if (captureAgentId.isSome()) {
+      if (captureAgentId.isPresent()) {
         dublinCore.set(DublinCore.PROPERTY_SPATIAL, captureAgentId.get());
       }
       if (!DublinCoreUtil.equals(dublinCore, dublinCoreCopy)) {
         dublinCoreChanged = true;
-        changedDublinCoreOpt = Opt.some(dublinCore);
-        mediaPackageOpt = Opt.some(updateDublincCoreCatalog(mediaPackageOpt.getOr(archivedMediaPackage),
+        changedDublinCoreOpt = Optional.of(dublinCore);
+        mediaPackageOpt = Optional.of(updateDublincCoreCatalog(mediaPackageOpt.orElse(archivedMediaPackage),
                 changedDublinCoreOpt.get()));
       }
 
-      Opt<Map<String, String>> finalCaProperties = Opt.none();
+      Optional<Map<String, String>> finalCaProperties = Optional.empty();
       if (propertiesChanged) {
-        finalCaProperties = Opt.some(getFinalAgentProperties(caProperties, wfProps, captureAgentId.getOr(agentId),
-                                                             seriesId, some(changedDublinCoreOpt.getOr(
+        finalCaProperties = Optional.of(getFinalAgentProperties(caProperties, wfProps, captureAgentId.orElse(agentId),
+                                                             seriesId, Optional.of(changedDublinCoreOpt.orElse(
                                                                      archivedDublinCore))));
       }
 
-      String checksum = calculateChecksum(workspace, getEventCatalogUIAdapterFlavors(), startDateTime.getOr(start),
-              endDateTime.getOr(end), captureAgentId.getOr(agentId), userIds.getOr(presenters),
-              mediaPackageOpt.getOr(archivedMediaPackage),
-              some(changedDublinCoreOpt.getOr(archivedDublinCore)), wfProperties.getOr(wfProps),
-              finalCaProperties.getOr(caProperties), changedAclOpt.getOr(new AccessControlList()));
+      String checksum = calculateChecksum(workspace, getEventCatalogUIAdapterFlavors(), startDateTime.orElse(start),
+              endDateTime.orElse(end), captureAgentId.orElse(agentId), userIds.orElse(presenters),
+              mediaPackageOpt.orElse(archivedMediaPackage),
+              Optional.of(changedDublinCoreOpt.orElse(archivedDublinCore)), wfProperties.orElse(wfProps),
+              finalCaProperties.orElse(caProperties), changedAclOpt.orElse(new AccessControlList()));
 
       String oldChecksum = extendedEventDto.getChecksum();
       if (checksum.equals(oldChecksum)) {
@@ -820,21 +792,21 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
       // Update asset
       persistEvent(mpId, checksum, startDateTime, endDateTime, captureAgentId, userIds,
-              mediaPackageOpt, wfProperties, finalCaProperties, Opt.none());
+              mediaPackageOpt, wfProperties, finalCaProperties, Optional.empty());
 
       // Update live event
-      updateLiveEvent(mpId, changedAclOpt, changedDublinCoreOpt, startDateTime, endDateTime, Opt.some(agentId),
+      updateLiveEvent(mpId, changedAclOpt, changedDublinCoreOpt, startDateTime, endDateTime, Optional.of(agentId),
               finalCaProperties);
 
       // Update Elasticsearch index
       updateEventInIndex(mpId, changedAclOpt, changedDublinCoreOpt, startDateTime, endDateTime, userIds,
-              Opt.some(agentId), finalCaProperties, Opt.none());
+              Optional.of(agentId), finalCaProperties, Optional.empty());
 
       // Update last modified
-      if (propertiesChanged || dublinCoreChanged || startDateTime.isSome() || endDateTime.isSome()) {
+      if (propertiesChanged || dublinCoreChanged || startDateTime.isPresent() || endDateTime.isPresent()) {
         touchLastEntry(agentId);
-        for (String agent : captureAgentId) {
-          touchLastEntry(agent);
+        if (captureAgentId.isPresent()) {
+          touchLastEntry(captureAgentId.get());
         }
       }
     } catch (NotFoundException | SchedulerException e) {
@@ -849,24 +821,28 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
             || securityService.getUser().hasRole(securityService.getOrganization().getAdminRole()));
   }
 
-  private Opt<DublinCoreCatalog> loadEpisodeDublinCoreFromAsset(Snapshot snapshot) {
-    Option<MediaPackageElement> dcCatalog = mlist(snapshot.getMediaPackage().getElements())
-            .filter(MediaPackageSupport.Filters.isEpisodeDublinCore).headOpt();
-    if (dcCatalog.isNone())
-      return Opt.none();
+  private Optional<DublinCoreCatalog> loadEpisodeDublinCoreFromAsset(Snapshot snapshot) {
+    Optional<MediaPackageElement> dcCatalog = Arrays.stream(snapshot.getMediaPackage().getElements())
+            .filter(MediaPackageSupport.Filters::isEpisodeDublinCore)
+            .findFirst();
+    if (dcCatalog.isEmpty()) {
+      return Optional.empty();
+    }
 
-    Opt<Asset> asset = assetManager.getAsset(snapshot.getVersion(),
+    Optional<Asset> asset = assetManager.getAsset(snapshot.getVersion(),
             snapshot.getMediaPackage().getIdentifier().toString(), dcCatalog.get().getIdentifier());
-    if (asset.isNone())
-      return Opt.none();
+    if (asset.isEmpty()) {
+      return Optional.empty();
+    }
 
-    if (Availability.OFFLINE.equals(asset.get().getAvailability()))
-      return Opt.none();
+    if (Availability.OFFLINE.equals(asset.get().getAvailability())) {
+      return Optional.empty();
+    }
 
     InputStream inputStream = null;
     try {
       inputStream = asset.get().getInputStream();
-      return Opt.some(DublinCores.read(inputStream));
+      return Optional.of(DublinCores.read(inputStream));
     } finally {
       IOUtils.closeQuietly(inputStream);
     }
@@ -882,8 +858,8 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     try {
       // Remove from database
       try {
-        Opt<ExtendedEventDto> extEvtOpt = persistence.getEvent(mediaPackageId);
-        if (extEvtOpt.isSome()) {
+        Optional<ExtendedEventDto> extEvtOpt = persistence.getEvent(mediaPackageId);
+        if (extEvtOpt.isPresent()) {
           String agentId = extEvtOpt.get().getCaptureAgentId();
           persistence.deleteEvent(mediaPackageId);
           if (StringUtils.isNotEmpty(agentId)) {
@@ -897,10 +873,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       }
 
       // Delete scheduler snapshot
-      AQueryBuilder query = assetManager.createQuery();
-      long deletedSnapshots = query.delete(SNAPSHOT_OWNER, query.snapshot())
-              .where(withOrganization(query).and(query.mediaPackageId(mediaPackageId)))
-              .name("delete episode").run();
+      long deletedSnapshots = assetManager.deleteSnapshots(mediaPackageId);
       notFoundInAssetManager = deletedSnapshots == 0;
 
       // Update live event
@@ -909,7 +882,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       // Update Elasticsearch index
       removeSchedulingInfoFromIndex(mediaPackageId);
     } catch (Exception e) {
-      logger.error("Could not remove event '{}' from persistent storage: {}", mediaPackageId, e);
+      logger.error("Could not remove event '{}' from persistent storage", mediaPackageId, e);
       throw new SchedulerException(e);
     }
 
@@ -937,18 +910,15 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notEmpty(mediaPackageId, "mediaPackageId");
 
     try {
-      AQueryBuilder query = assetManager.createQuery();
-      AResult result = query.select(query.snapshot())
-              .where(withOrganization(query).and(query.mediaPackageId(mediaPackageId)).and(withOwner(query))
-              .and(query.version().isLatest()))
-              .run();
-      Opt<ARecord> record = result.getRecords().head();
-      if (record.isNone())
+      Optional<Snapshot> optSnapshot = assetManager.getLatestSnapshot(mediaPackageId);
+      if (optSnapshot.isEmpty()) {
         throw new NotFoundException();
+      }
 
-      Opt<DublinCoreCatalog> dublinCore = loadEpisodeDublinCoreFromAsset(record.get().getSnapshot().get());
-      if (dublinCore.isNone())
+      Optional<DublinCoreCatalog> dublinCore = loadEpisodeDublinCoreFromAsset(optSnapshot.get());
+      if (dublinCore.isEmpty()) {
         throw new NotFoundException("No dublincore catalog found " + mediaPackageId);
+      }
 
       return dublinCore.get();
     } catch (NotFoundException e) {
@@ -965,9 +935,10 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notEmpty(mediaPackageId, "mediaPackageId");
 
     try {
-      final Opt<ExtendedEventDto> extEvt = persistence.getEvent(mediaPackageId);
-      if (extEvt.isNone())
+      final Optional<ExtendedEventDto> extEvt = persistence.getEvent(mediaPackageId);
+      if (extEvt.isEmpty()) {
         throw new NotFoundException();
+      }
 
       return getTechnicalMetadata(extEvt.get());
     } catch (NotFoundException e) {
@@ -983,9 +954,10 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notEmpty(mediaPackageId, "mediaPackageId");
 
     try {
-      Opt<ExtendedEventDto> record = persistence.getEvent(mediaPackageId);
-      if (record.isNone())
+      Optional<ExtendedEventDto> record = persistence.getEvent(mediaPackageId);
+      if (record.isEmpty()) {
         throw new NotFoundException();
+      }
       return deserializeExtendedEventProperties(record.get().getWorkflowProperties());
     } catch (NotFoundException e) {
       throw e;
@@ -1001,9 +973,10 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notEmpty(mediaPackageId, "mediaPackageId");
 
     try {
-      Opt<ExtendedEventDto> record = persistence.getEvent(mediaPackageId);
-      if (record.isNone())
+      Optional<ExtendedEventDto> record = persistence.getEvent(mediaPackageId);
+      if (record.isEmpty()) {
         throw new NotFoundException();
+      }
       return deserializeExtendedEventProperties(record.get().getCaptureAgentProperties());
     } catch (NotFoundException e) {
       throw e;
@@ -1023,10 +996,10 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   @Override
-  public List<MediaPackage> search(Opt<String> captureAgentId, Opt<Date> startsFrom, Opt<Date> startsTo,
-          Opt<Date> endFrom, Opt<Date> endTo) throws SchedulerException {
+  public List<MediaPackage> search(Optional<String> captureAgentId, Optional<Date> startsFrom, Optional<Date> startsTo,
+          Optional<Date> endFrom, Optional<Date> endTo) throws SchedulerException {
     try {
-      return persistence.search(captureAgentId, startsFrom, startsTo, endFrom, endTo, Opt.none()).stream()
+      return persistence.search(captureAgentId, startsFrom, startsTo, endFrom, endTo, Optional.empty()).stream()
           .map(ExtendedEventDto::getMediaPackageId)
           .map(this::getEventMediaPackage).collect(Collectors.toList());
     } catch (Exception e) {
@@ -1035,28 +1008,30 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   @Override
-  public Opt<MediaPackage> getCurrentRecording(String captureAgentId) throws SchedulerException {
+  public Optional<MediaPackage> getCurrentRecording(String captureAgentId) throws SchedulerException {
     try {
       final Date now = new Date();
-      List<ExtendedEventDto> result = persistence.search(Opt.some(captureAgentId), Opt.none(), Opt.some(now), Opt.some(now), Opt.none(), Opt.some(1));
+      List<ExtendedEventDto> result = persistence.search(Optional.of(captureAgentId), Optional.empty(),
+          Optional.of(now), Optional.of(now), Optional.empty(), Optional.of(1));
       if (result.isEmpty()) {
-        return Opt.none();
+        return Optional.empty();
       }
-      return Opt.some(getEventMediaPackage(result.get(0).getMediaPackageId()));
+      return Optional.of(getEventMediaPackage(result.get(0).getMediaPackageId()));
     } catch (Exception e) {
       throw new SchedulerException(e);
     }
   }
 
   @Override
-  public Opt<MediaPackage> getUpcomingRecording(String captureAgentId) throws SchedulerException {
+  public Optional<MediaPackage> getUpcomingRecording(String captureAgentId) throws SchedulerException {
     try {
       final Date now = new Date();
-      List<ExtendedEventDto> result = persistence.search(Opt.some(captureAgentId), Opt.some(now), Opt.none(), Opt.none(), Opt.none(), Opt.some(1));
+      List<ExtendedEventDto> result = persistence.search(Optional.of(captureAgentId), Optional.of(now),
+          Optional.empty(), Optional.empty(), Optional.empty(), Optional.of(1));
       if (result.isEmpty()) {
-        return Opt.none();
+        return Optional.empty();
       }
-      return Opt.some(getEventMediaPackage(result.get(0).getMediaPackageId()));
+      return Optional.of(getEventMediaPackage(result.get(0).getMediaPackageId()));
     } catch (Exception e) {
       throw new SchedulerException(e);
     }
@@ -1064,7 +1039,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
   @Override
   public List<MediaPackage> findConflictingEvents(String captureDeviceID, Date startDate, Date endDate)
-      throws SchedulerException {
+          throws SchedulerException {
     try {
       final Organization organization = securityService.getOrganization();
       final User user = SecurityUtil.createSystemUser(systemUserName, organization);
@@ -1153,57 +1128,66 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   @Override
-  public String getCalendar(Opt<String> captureAgentId, Opt<String> seriesId, Opt<Date> cutoff)
+  public String getCalendar(Optional<String> captureAgentId, Optional<String> seriesId, Optional<Date> cutoff)
           throws SchedulerException {
 
     try {
-      final Map<String, ExtendedEventDto> searchResult = persistence.search(captureAgentId, Opt.none(), cutoff,
-          Opt.some(DateTime.now().minusHours(1).toDate()), Opt.none(), Opt.none()).stream()
+      final Map<String, ExtendedEventDto> searchResult = persistence.search(captureAgentId, Optional.empty(), cutoff,
+          Optional.of(DateTime.now().minusHours(1).toDate()), Optional.empty(), Optional.empty()).stream()
           .collect(Collectors.toMap(ExtendedEventDto::getMediaPackageId, Function.identity()));
-      final AQueryBuilder query = assetManager.createQuery();
-      final AResult result = query.select(query.snapshot())
-          .where(withOrganization(query).and(query.mediaPackageIds(searchResult.keySet().toArray(new String[0])))
-              .and(withOwner(query)).and(query.version().isLatest()))
-          .run();
+      var mpIds = searchResult.keySet();
+      List<Snapshot> snapshots = assetManager.getLatestSnapshots(mpIds);
 
       final CalendarGenerator cal = new CalendarGenerator(seriesService);
-      for (final ARecord record : result.getRecords()) {
-        final Opt<MediaPackage> optMp = record.getSnapshot().map(episodeToMp);
+      for (String mpId : mpIds) {
+        final Optional<Snapshot> optSnapshot = snapshots.stream()
+            .filter(mp -> mp.getMediaPackage().getIdentifier().toString().equals(mpId))
+            .findFirst();
 
         // If the event media package is empty, skip the event
-        if (optMp.isNone()) {
-          logger.warn("Mediapackage for event '{}' can't be found, event is not recorded", record.getMediaPackageId());
+        if (optSnapshot.isEmpty()) {
+          logger.warn("Mediapackage for event '{}' can't be found, event is not recorded", mpId);
           continue;
         }
 
-        if (seriesId.isSome() && !seriesId.get().equals(optMp.get().getSeries())) {
+        Snapshot snapshot = optSnapshot.get();
+
+        if (seriesId.isPresent() && !seriesId.get().equals(snapshot.getMediaPackage().getSeries())) {
           continue;
         }
 
-        Opt<DublinCoreCatalog> catalogOpt = loadEpisodeDublinCoreFromAsset(record.getSnapshot().get());
-        if (catalogOpt.isNone()) {
+        Optional<DublinCoreCatalog> catalogOpt = loadEpisodeDublinCoreFromAsset(snapshot);
+        if (catalogOpt.isEmpty()) {
           logger.warn("No episode catalog available, skipping!");
           continue;
         }
 
-        final Map<String, String> caMetadata = deserializeExtendedEventProperties(searchResult.get(record.getMediaPackageId()).getCaptureAgentProperties());
+        final Map<String, String> caMetadata = deserializeExtendedEventProperties(
+            searchResult.get(mpId).getCaptureAgentProperties());
 
         // If the even properties are empty, skip the event
         if (caMetadata.isEmpty()) {
-          logger.warn("Properties for event '{}' can't be found, event is not recorded", record.getMediaPackageId());
+          logger.warn("Properties for event '{}' can't be found, event is not recorded", mpId);
           continue;
         }
 
-        final String agentId = searchResult.get(record.getMediaPackageId()).getCaptureAgentId();
-        final Date start = searchResult.get(record.getMediaPackageId()).getStartDate();
-        final Date end = searchResult.get(record.getMediaPackageId()).getEndDate();
-        final Date lastModified = record.getSnapshot().get().getArchivalDate();
+        final String agentId = searchResult.get(mpId).getCaptureAgentId();
+        final Date start = searchResult.get(mpId).getStartDate();
+        final Date end = searchResult.get(mpId).getEndDate();
+        final Date lastModified = snapshot.getArchivalDate();
 
         // Add the entry to the calendar, skip it with a warning if adding fails
         try {
-          cal.addEvent(optMp.get(), catalogOpt.get(), agentId, start, end, lastModified, toPropertyString(caMetadata));
+          cal.addEvent(
+              snapshot.getMediaPackage(),
+              catalogOpt.get(),
+              agentId,
+              start,
+              end,
+              lastModified,
+              toPropertyString(caMetadata));
         } catch (Exception e) {
-          logger.warn("Error adding event '{}' to calendar, event is not recorded", record.getMediaPackageId(), e);
+          logger.warn("Error adding event '{}' to calendar, event is not recorded", mpId, e);
         }
       }
 
@@ -1225,8 +1209,9 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
     try {
       String lastModified = lastModifiedCache.getIfPresent(captureAgentId);
-      if (lastModified != null)
+      if (lastModified != null) {
         return lastModified;
+      }
 
       populateLastModifiedCache();
 
@@ -1252,8 +1237,8 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
     List<ExtendedEventDto> finishedEvents;
     try {
-      finishedEvents = persistence.search(Opt.<String> none(), Opt.<Date> none(), Opt.<Date> none(), Opt.<Date> none(),
-              Opt.some(end.toDate()), Opt.none());
+      finishedEvents = persistence.search(Optional.empty(), Optional.empty(), Optional.empty(), Optional.empty(),
+              Optional.of(end.toDate()), Optional.empty());
       logger.debug("Found {} events from search.", finishedEvents.size());
     } catch (Exception e) {
       throw new SchedulerException(e);
@@ -1287,10 +1272,11 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     }
 
     try {
-      final Opt<ExtendedEventDto> optExtEvt = persistence.getEvent(id);
+      final Optional<ExtendedEventDto> optExtEvt = persistence.getEvent(id);
 
-      if (optExtEvt.isNone())
+      if (optExtEvt.isEmpty()) {
         throw new NotFoundException();
+      }
 
       final String prevRecordingState = optExtEvt.get().getRecordingState();
       final Recording r = new RecordingImpl(id, state);
@@ -1302,8 +1288,8 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
                 .updateRecordingStatus(r.getState(), r.getLastCheckinTime()))));
 
         // Update Elasticsearch index
-        updateEventInIndex(r.getID(), Opt.none(), Opt.none(), Opt.none(), Opt.none(), Opt.none(),
-                Opt.none(), Opt.none(), Opt.some(r.getState()));
+        updateEventInIndex(r.getID(), Optional.empty(), Optional.empty(), Optional.empty(), Optional.empty(),
+                Optional.empty(), Optional.empty(), Optional.empty(), Optional.of(r.getState()));
       } else {
         logger.debug("Recording state not changed");
       }
@@ -1311,17 +1297,17 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       persistence.storeEvent(
           id,
           securityService.getOrganization().getId(),
-          Opt.none(),
-          Opt.none(),
-          Opt.none(),
-          Opt.none(),
-          Opt.some(r.getState()),
-          Opt.some(r.getLastCheckinTime()),
-          Opt.none(),
-          Opt.none(),
-          Opt.none(),
-          Opt.none(),
-          Opt.none()
+          Optional.empty(),
+          Optional.empty(),
+          Optional.empty(),
+          Optional.empty(),
+          Optional.of(r.getState()),
+          Optional.of(r.getLastCheckinTime()),
+          Optional.empty(),
+          Optional.empty(),
+          Optional.empty(),
+          Optional.empty(),
+          Optional.empty()
       );
       return true;
     } catch (NotFoundException e) {
@@ -1337,9 +1323,9 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     notEmpty(id, "id");
 
     try {
-      Opt<ExtendedEventDto> extEvt = persistence.getEvent(id);
+      Optional<ExtendedEventDto> extEvt = persistence.getEvent(id);
 
-      if (extEvt.isNone() || extEvt.get().getRecordingState() == null) {
+      if (extEvt.isEmpty() || extEvt.get().getRecordingState() == null) {
         throw new NotFoundException();
       }
 
@@ -1376,7 +1362,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
       return persistence.getKnownRecordings().parallelStream()
           .collect(
               Collectors.toMap(ExtendedEventDto::getMediaPackageId,
-              dto -> new RecordingImpl(dto.getMediaPackageId(), dto.getRecordingState(), dto.getRecordingLastHeard()))
+                dto -> new RecordingImpl(dto.getMediaPackageId(), dto.getRecordingState(), dto.getRecordingLastHeard()))
           );
     } catch (Exception e) {
       throw new SchedulerException(e);
@@ -1384,13 +1370,13 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   private synchronized void persistEvent(final String mpId, final String checksum,
-          final Opt<Date> startDateTime, final Opt<Date> endDateTime, final Opt<String> captureAgentId,
-          final Opt<Set<String>> userIds, final Opt<MediaPackage> mediaPackage,
-          final Opt<Map<String, String>> wfProperties, final Opt<Map<String, String>> caProperties,
-          final Opt<String> schedulingSource) throws SchedulerServiceDatabaseException {
+          final Optional<Date> startDateTime, final Optional<Date> endDateTime, final Optional<String> captureAgentId,
+          final Optional<Set<String>> userIds, final Optional<MediaPackage> mediaPackage,
+          final Optional<Map<String, String>> wfProperties, final Optional<Map<String, String>> caProperties,
+          final Optional<String> schedulingSource) throws SchedulerServiceDatabaseException {
     // Store scheduled mediapackage
-    for (MediaPackage mpToUpdate : mediaPackage) {
-      assetManager.takeSnapshot(SNAPSHOT_OWNER, mpToUpdate);
+    if (mediaPackage.isPresent()) {
+      assetManager.takeSnapshot(SNAPSHOT_OWNER, mediaPackage.get());
     }
 
     // Store extended event
@@ -1401,11 +1387,11 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
         startDateTime,
         endDateTime,
         schedulingSource,
-        Opt.none(),
-        Opt.none(),
-        userIds.isSome() ? Opt.some(String.join(",", userIds.get())) : Opt.none(),
-        Opt.some(new Date()),
-        Opt.some(checksum),
+        Optional.empty(),
+        Optional.empty(),
+        userIds.isPresent() ? Optional.of(String.join(",", userIds.get())) : Optional.empty(),
+        Optional.of(new Date()),
+        Optional.of(checksum),
         wfProperties,
         caProperties
     );
@@ -1415,7 +1401,6 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    * Update the event in the Elasticsearch index. Fields will only be updated of the corresponding Opt is not none.
    *
    * @param mediaPackageId
-   * @param index
    * @param acl
    * @param dublinCore
    * @param startTime
@@ -1425,55 +1410,16 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    * @param properties
    * @param recordingStatus
    */
-  private void updateEventInIndex(String mediaPackageId, Opt<AccessControlList> acl,
-          Opt<DublinCoreCatalog> dublinCore, Opt<Date> startTime, Opt<Date> endTime, Opt<Set<String>> presenters,
-          Opt<String> agentId, Opt<Map<String, String>> properties, Opt<String> recordingStatus) {
+  private void updateEventInIndex(String mediaPackageId, Optional<AccessControlList> acl,
+          Optional<DublinCoreCatalog> dublinCore, Optional<Date> startTime, Optional<Date> endTime,
+          Optional<Set<String>> presenters, Optional<String> agentId, Optional<Map<String, String>> properties,
+          Optional<String> recordingStatus) {
 
     String organization = getSecurityService().getOrganization().getId();
     User user = getSecurityService().getUser();
 
-    Function<Optional<Event>, Optional<Event>> updateFunction = (Optional<Event> eventOpt) -> {
-      Event event = eventOpt.orElse(new Event(mediaPackageId, organization));
-
-      if (acl.isSome()) {
-        event.setAccessPolicy(AccessControlParser.toJsonSilent(acl.get()));
-      }
-      if (dublinCore.isSome()) {
-        EventIndexUtils.updateEvent(event, dublinCore.get());
-        if (isBlank(event.getCreator()))
-          event.setCreator(getSecurityService().getUser().getName());
-
-        // Update series name if not already done
-        try {
-          EventIndexUtils.updateSeriesName(event, organization, user, index);
-        } catch (SearchIndexException e) {
-          logger.error("Error updating the series name of the event {} in the {} index.", mediaPackageId,
-                  index.getIndexName(), e);
-        }
-      }
-      if (presenters.isSome()) {
-        event.setTechnicalPresenters(new ArrayList<>(presenters.get()));
-      }
-      if (agentId.isSome()) {
-        event.setAgentId(agentId.get());
-      }
-      if (recordingStatus.isSome() && !recordingStatus.get().equals(RecordingState.UNKNOWN)) {
-        event.setRecordingStatus(recordingStatus.get());
-      }
-      if (properties.isSome()) {
-        event.setAgentConfiguration(properties.get());
-      }
-      if (startTime.isSome()) {
-        String startTimeStr = startTime == null ? null : DateTimeSupport.toUTC(startTime.get().getTime());
-        event.setTechnicalStartTime(startTimeStr);
-      }
-      if (endTime.isSome()) {
-        String endTimeStr = endTime == null ? null : DateTimeSupport.toUTC(endTime.get().getTime());
-        event.setTechnicalEndTime(endTimeStr);
-      }
-
-      return Optional.of(event);
-    };
+    Function<Optional<Event>, Optional<Event>> updateFunction = getEventUpdateFunction(mediaPackageId, acl, dublinCore,
+            startTime, endTime, presenters, agentId, properties, recordingStatus, organization, user);
 
     try {
       index.addOrUpdateEvent(mediaPackageId, updateFunction, organization, user);
@@ -1487,7 +1433,6 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    * Set recording status to null for this event in the Elasticsearch index.
    *
    * @param mediaPackageId
-   * @param index
    */
   private void removeRecordingStatusFromIndex(String mediaPackageId) {
     String organization = getSecurityService().getOrganization().getId();
@@ -1512,7 +1457,6 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    * Remove scheduling information for this event from the Elasticsearch index.
    *
    * @param mediaPackageId
-   * @param index
    */
   private void removeSchedulingInfoFromIndex(String mediaPackageId) {
     String orgId = getSecurityService().getOrganization().getId();
@@ -1538,25 +1482,26 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    * @param agentId
    * @param properties
    */
-  private void updateLiveEvent(String mpId, Opt<AccessControlList> acl, Opt<DublinCoreCatalog> dublinCore,
-          Opt<Date> startTime, Opt<Date> endTime, Opt<String> agentId, Opt<Map<String, String>> properties) {
+  private void updateLiveEvent(String mpId, Optional<AccessControlList> acl, Optional<DublinCoreCatalog> dublinCore,
+          Optional<Date> startTime, Optional<Date> endTime, Optional<String> agentId,
+          Optional<Map<String, String>> properties) {
     List<SchedulerItem> items = new ArrayList<>();
-    if (acl.isSome()) {
+    if (acl.isPresent()) {
       items.add(SchedulerItem.updateAcl(acl.get()));
     }
-    if (dublinCore.isSome()) {
+    if (dublinCore.isPresent()) {
       items.add(SchedulerItem.updateCatalog(dublinCore.get()));
     }
-    if (startTime.isSome()) {
+    if (startTime.isPresent()) {
       items.add(SchedulerItem.updateStart(startTime.get()));
     }
-    if (endTime.isSome()) {
+    if (endTime.isPresent()) {
       items.add(SchedulerItem.updateEnd(endTime.get()));
     }
-    if (agentId.isSome()) {
+    if (agentId.isPresent()) {
       items.add(SchedulerItem.updateAgent(agentId.get()));
     }
-    if (properties.isSome()) {
+    if (properties.isPresent()) {
       items.add(SchedulerItem.updateProperties(properties.get()));
     }
 
@@ -1566,20 +1511,21 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   }
 
   private Map<String, String> getFinalAgentProperties(Map<String, String> caMetadata, Map<String, String> wfProperties,
-          String captureAgentId, Opt<String> seriesId, Opt<DublinCoreCatalog> dublinCore) {
+          String captureAgentId, Optional<String> seriesId, Optional<DublinCoreCatalog> dublinCore) {
     Map<String, String> properties = new HashMap<>();
     for (Entry<String, String> entry : caMetadata.entrySet()) {
-      if (entry.getKey().startsWith(WORKFLOW_CONFIG_PREFIX))
+      if (entry.getKey().startsWith(WORKFLOW_CONFIG_PREFIX)) {
         continue;
+      }
       properties.put(entry.getKey(), entry.getValue());
     }
     for (Entry<String, String> entry : wfProperties.entrySet()) {
       properties.put(WORKFLOW_CONFIG_PREFIX.concat(entry.getKey()), entry.getValue());
     }
-    if (dublinCore.isSome()) {
+    if (dublinCore.isPresent()) {
       properties.put("event.title", dublinCore.get().getFirst(DublinCore.PROPERTY_TITLE));
     }
-    if (seriesId.isSome()) {
+    if (seriesId.isPresent()) {
       properties.put("event.series", seriesId.get());
     }
     properties.put("event.location", captureAgentId);
@@ -1615,25 +1561,20 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
 
   private String toPropertyString(Map<String, String> properties) {
     StringBuilder wfPropertiesString = new StringBuilder();
-    for (Map.Entry<String, String> entry : properties.entrySet())
+    for (Map.Entry<String, String> entry : properties.entrySet()) {
       wfPropertiesString.append(entry.getKey() + "=" + entry.getValue() + "\n");
+    }
     return wfPropertiesString.toString();
   }
 
   private MediaPackage getEventMediaPackage(final String mediaPackageId, boolean checkOwner) {
-    AQueryBuilder query = assetManager.createQuery();
-    var predicate = withOrganization(query)
-            .and(query.mediaPackageId(mediaPackageId))
-            .and(query.version().isLatest());
-    if (checkOwner) {
-      predicate = predicate.and(withOwner(query));
+    Optional<MediaPackage> mediaPackage = assetManager.getMediaPackage(mediaPackageId);
+
+    if (mediaPackage.isEmpty()) {
+      throw new RuntimeNotFoundException(new NotFoundException());
     }
 
-    Opt<ARecord> record = query.select(query.snapshot()).where(predicate).run().getRecords().head();
-    if (record.isNone())
-      throw new RuntimeNotFoundException(new NotFoundException());
-
-    return record.bind(recordToMp).get();
+    return mediaPackage.get();
   }
 
   private MediaPackage getEventMediaPackage(final String mediaPackageId) {
@@ -1674,26 +1615,19 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
     final String agentId = extEvt.getCaptureAgentId();
     final Date start = extEvt.getStartDate();
     final Date end = extEvt.getEndDate();
-    final Set<String> presenters = getPresenters(Opt.nul(extEvt.getPresenters()).getOr(""));
-    final Opt<String> recordingStatus = Opt.nul(extEvt.getRecordingState());
-    final Opt<Long> lastHeard = Opt.nul(extEvt.getRecordingLastHeard());
+    final Set<String> presenters = getPresenters(Optional.ofNullable(extEvt.getPresenters()).orElse(""));
+    final Optional<String> recordingStatus = Optional.ofNullable(extEvt.getRecordingState());
+    final Optional<Long> lastHeard = Optional.ofNullable(extEvt.getRecordingLastHeard());
     final Map<String, String> caMetadata = deserializeExtendedEventProperties(extEvt.getCaptureAgentProperties());
     final Map<String, String> wfProperties = deserializeExtendedEventProperties(extEvt.getWorkflowProperties());
 
     Recording recording = null;
-    if (recordingStatus.isSome() && lastHeard.isSome())
+    if (recordingStatus.isPresent() && lastHeard.isPresent()) {
       recording = new RecordingImpl(extEvt.getMediaPackageId(), recordingStatus.get(), lastHeard.get());
+    }
 
     return new TechnicalMetadataImpl(extEvt.getMediaPackageId(), agentId, start, end, presenters, wfProperties,
-            caMetadata, Opt.nul(recording));
-  }
-
-  private Predicate withOrganization(AQueryBuilder query) {
-    return query.organizationId().eq(securityService.getOrganization().getId());
-  }
-
-  private Predicate withOwner(AQueryBuilder query) {
-    return query.owner().eq(SNAPSHOT_OWNER);
+            caMetadata, Optional.ofNullable(recording));
   }
 
   private Set<String> getPresenters(String presentersString) {
@@ -1705,21 +1639,24 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
    */
   private List<MediaPackageElementFlavor> getEventCatalogUIAdapterFlavors() {
     String organization = securityService.getOrganization().getId();
-    return Stream.$(eventCatalogUIAdapters).filter(eventOrganizationFilter._2(organization)).map(uiAdapterToFlavor)
-            .filter(isNotEpisodeDublinCore).toList();
+    return eventCatalogUIAdapters.stream()
+        .filter(adapter -> adapter.handlesOrganization(organization))
+        .map(EventCatalogUIAdapter::getFlavor)
+        .filter(mpe -> !MediaPackageElements.EPISODE.matches(mpe))
+        .collect(Collectors.toList());
   }
 
   @Override
-  public void repopulate() throws IndexRebuildException {
+  public void repopulate(IndexRebuildService.DataType type) throws IndexRebuildException {
     try {
       final int total;
       try {
         total = persistence.countEvents();
       } catch (SchedulerServiceDatabaseException e) {
-        logIndexRebuildError(logger, index.getIndexName(), e);
-        throw new IndexRebuildException(index.getIndexName(), getService(), e);
+        logIndexRebuildError(logger, e);
+        throw new IndexRebuildException(getService(), e);
       }
-      logIndexRebuildBegin(logger, index.getIndexName(), total, "scheduled events");
+      logIndexRebuildBegin(logger, total, "scheduled events");
       final int[] current = {0};
       int n = 20;
       var updatedEventRange = new ArrayList<Event>();
@@ -1732,7 +1669,7 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
                   try {
                     events = persistence.getEvents();
                   } catch (SchedulerServiceDatabaseException e) {
-                    logIndexRebuildError(logger, index.getIndexName(), e, organization);
+                    logIndexRebuildError(logger, e, organization);
                     return;
                   }
 
@@ -1741,24 +1678,36 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
                       current[0]++;
 
                       var updatedEventData = Optional.of(new Event(event.getMediaPackageId(), organization.getId()));
-                      updatedEventData = getEventUpdateFunction(event, organization.getId(),
-                                  securityService.getUser()).apply(updatedEventData);
+
+                      final Set<String> presenters = getPresenters(
+                              Optional.ofNullable(event.getPresenters()).orElse(""));
+                      final Map<String, String> caMetadata = deserializeExtendedEventProperties(
+                              event.getCaptureAgentProperties());
+
+                      updatedEventData = getEventUpdateFunction(event.getMediaPackageId(), Optional.empty(),
+                              Optional.empty(), Optional.of(event.getStartDate()), Optional.of(event.getEndDate()),
+                              Optional.of(presenters), Optional.of(event.getCaptureAgentId()), Optional.of(caMetadata),
+                              Optional.ofNullable(event.getRecordingState()), organization.getId(),
+                              securityService.getUser()).apply(updatedEventData);
                       updatedEventRange.add(updatedEventData.get());
 
                       if (updatedEventRange.size() >= n || current[0] >= events.size()) {
                         index.bulkEventUpdate(updatedEventRange);
-                        logIndexRebuildProgress(logger, index.getIndexName(), total, current[0], n);
+                        logIndexRebuildProgress(logger, total, current[0], n);
                         updatedEventRange.clear();
                       }
+
                     } catch (SearchIndexException e) {
                       logger.error("Error while updating event '{}' from search index:", event.getMediaPackageId(), e);
+                    } catch (Exception e) {
+                      throw new RuntimeException("Fatal error while indexing event " + event.getMediaPackageId(), e);
                     }
                   }
-               });
+                });
       }
     } catch (Exception e) {
-      logIndexRebuildError(logger, index.getIndexName(), e);
-      throw new IndexRebuildException(index.getIndexName(), getService(), e);
+      logIndexRebuildError(logger, e);
+      throw new IndexRebuildException(getService(), e);
     }
   }
 
@@ -1770,71 +1719,55 @@ public class SchedulerServiceImpl extends AbstractIndexProducer implements Sched
   public SecurityService getSecurityService() {
     return securityService;
   }
+
   /**
    * Get the function to update a scheduled event in the Elasticsearch index.
    *
-   * @param scheduledEvent
-   *          The theme to update
-   * @param orgId
-   *          The id of the current organization
-   * @param user
-   *          The user
+   * @param orgId          The id of the current organization
+   * @param user           The user
    * @return the function to do the update
    */
-  private Function<Optional<Event>, Optional<Event>> getEventUpdateFunction(ExtendedEventDto scheduledEvent,
-          String orgId, User user) {
+  private Function<Optional<Event>, Optional<Event>> getEventUpdateFunction(String mediaPackageId,
+          Optional<AccessControlList> acl, Optional<DublinCoreCatalog> dublinCore, Optional<Date> startTime,
+          Optional<Date> endTime, Optional<Set<String>> presenters, Optional<String> agentId,
+          Optional<Map<String, String>> properties, Optional<String> recordingStatus, String orgId, User user) {
     return (Optional<Event> eventOpt) -> {
-      Event event = eventOpt.orElse(new Event(scheduledEvent.getMediaPackageId(), orgId));
-      final Set<String> presenters = getPresenters(Opt.nul(scheduledEvent.getPresenters()).getOr(""));
-      final Map<String, String> caMetadata = deserializeExtendedEventProperties(scheduledEvent.
-              getCaptureAgentProperties());
-      AQueryBuilder query = assetManager.createQuery();
-      final AResult result = query.select(query.snapshot())
-              .where(query.mediaPackageId(scheduledEvent.getMediaPackageId()).and(query.version().isLatest())).run();
-      final Snapshot snapshot = result.getRecords().head().get().getSnapshot().get();
+      Event event = eventOpt.orElse(new Event(mediaPackageId, orgId));
 
-      Opt<AccessControlList> acl = Opt.some(authorizationService.getActiveAcl(snapshot.getMediaPackage()).getA());
-      Opt<DublinCoreCatalog> dublinCore = loadEpisodeDublinCoreFromAsset(snapshot);
-      Opt<Date> startTime = Opt.some(scheduledEvent.getStartDate());
-      Opt<Date> endTime = Opt.some(scheduledEvent.getEndDate());
-      Opt<Set<String>> presentersOpt = Opt.some(presenters);
-      Opt<String> agentId = Opt.some(scheduledEvent.getCaptureAgentId());
-      Opt<Map<String, String>> properties = Opt.some(caMetadata);
-      Opt<String> recordingStatus = Opt.nul(scheduledEvent.getRecordingState());
-
-      if (acl.isSome()) {
+      if (acl.isPresent()) {
         event.setAccessPolicy(AccessControlParser.toJsonSilent(acl.get()));
       }
-      if (dublinCore.isSome()) {
+      if (dublinCore.isPresent()) {
         EventIndexUtils.updateEvent(event, dublinCore.get());
-        if (isBlank(event.getCreator()))
+        if (isBlank(event.getCreator())) {
           event.setCreator(getSecurityService().getUser().getName());
+        }
 
         // Update series name if not already done
         try {
           EventIndexUtils.updateSeriesName(event, orgId, user, index);
         } catch (SearchIndexException e) {
-          logger.error("Error updating the series name of the event {} in the {} index.",
-                  scheduledEvent.getMediaPackageId(), index.getIndexName(), e);
+          logger.error("Error updating the series name of the event {} in the {} index.", mediaPackageId,
+                  index.getIndexName(), e);
         }
       }
-      if (presentersOpt.isSome()) {
-        event.setTechnicalPresenters(new ArrayList<>(presentersOpt.get()));
+      if (presenters.isPresent()) {
+        event.setTechnicalPresenters(new ArrayList<>(presenters.get()));
       }
-      if (agentId.isSome()) {
+      if (agentId.isPresent()) {
         event.setAgentId(agentId.get());
       }
-      if (recordingStatus.isSome() && !recordingStatus.get().equals(RecordingState.UNKNOWN)) {
+      if (recordingStatus.isPresent() && !recordingStatus.get().equals(RecordingState.UNKNOWN)) {
         event.setRecordingStatus(recordingStatus.get());
       }
-      if (properties.isSome()) {
+      if (properties.isPresent()) {
         event.setAgentConfiguration(properties.get());
       }
-      if (startTime.isSome()) {
+      if (startTime.isPresent()) {
         String startTimeStr = startTime == null ? null : DateTimeSupport.toUTC(startTime.get().getTime());
         event.setTechnicalStartTime(startTimeStr);
       }
-      if (endTime.isSome()) {
+      if (endTime.isPresent()) {
         String endTimeStr = endTime == null ? null : DateTimeSupport.toUTC(endTime.get().getTime());
         event.setTechnicalEndTime(endTimeStr);
       }
